Fix button bottom padding on mobile view

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -189,7 +189,7 @@ html {
 }
 
 body {
-    background: #312450;
+    background: #000;
 }
 
 body.is-preload *,
@@ -2891,7 +2891,7 @@ ul.actions.fit.stacked {
         -webkit-flex-shrink: 1;
         -ms-flex-shrink: 1;
         flex-shrink: 1;
-        padding: 1em 0 0 0;
+        padding: 1em 0 1em 0;
         text-align: center;
         width: 100%;
     }
@@ -3670,7 +3670,7 @@ body.is-preload .wrapper.fade>.inner {
     height: 100vh;
     left: 0;
     overflow-x: hidden;
-    overflow-y: auto;
+    overflow-y: hidden;
     position: fixed;
     text-align: right;
     top: 0;
